# Diatony

./: .gitignore  MusicConstraints.lisp  README.md  example_patch.omp  graphs.py  musicalRulesIntoConstraints.docx
ConstraintsGauldin/: ConstraintsFromGauldin.docx  Règles musicales Duha.docx
ConstraintsGauldin/Gauldin/: Gauldin_csts.cpp  Gauldin_csts.h  Main.cpp  Main.h  Makefile  Test.cpp  Test.h  Tonality.cpp  Tonality.h  Utilities.cpp  Utilities.h
ContraintesDuha/: AvancementImplementationRegles.xlsx
ContraintesDuha/Code/: CMakeLists.txt  FourVoiceTexture.cpp  FourVoiceTexture.h  FourVoiceTexture.hpp  FourVoiceTextureConstraints.cpp  FourVoiceTextureConstraints.h  FourVoiceTextureConstraints.hpp  Main.cpp  Main.h  Main.hpp  MajorTonality.cpp  MajorTonality.hpp  Makefile  MinorTonality.cpp  MinorTonality.hpp  TODO.txt  Tonality.cpp  Tonality.h  Tonality.hpp  TonalityTest  TonalityTest.cpp  TonalityTest.hpp  Utilities.cpp  Utilities.h
ContraintesDuha/DuhaRules/: Makefile  Simple_problem.cpp  Simple_problem.h
c++/: CMakeLists.txt  Constraints.cpp  FourVoiceTexture.cpp  FourVoiceTextureVariations.cpp  GeneralConstraints.cpp  HarmonicConstraints.cpp  MajorTonality.cpp  Makefile  MinorTonality.cpp  Preferences.cpp  SolutionFinders.cpp  Solver.cpp  TODO.txt  TestCases.txt  Tonality.cpp  Utilities.cpp  VoiceLeadingConstraints.cpp  file_variables.mk  four_voice_texture.cpp  gecode_problem.cpp  launch_tests.sh  log.txt  main.cpp  outFileOpt  problem_wrapper.cpp  testTonality  testTonality.cpp
c++/headers/: Constraints.hpp  FourVoiceTexture.hpp  FourVoiceTextureVariations.hpp  GeneralConstraints.hpp  HarmonicConstraints.hpp  MajorTonality.hpp  MidiFileGeneration.hpp  MinorTonality.hpp  Preferences.hpp  SolutionFinders.hpp  Solver.hpp  Tonality.hpp  Utilities.hpp  VoiceLeadingConstraints.hpp  four_voice_texture.hpp  gecode_problem.hpp  problem_wrapper.hpp
c++/headers/aux/: MajorTonality.hpp  MidiFileGeneration.hpp  MinorTonality.hpp  Tonality.hpp  Utilities.hpp
c++/headers/diatony/: FourVoiceTexture.hpp  FourVoiceTextureParameters.hpp  GeneralConstraints.hpp  HarmonicConstraints.hpp  ModulationParameters.hpp  Preferences.hpp  SolveDiatony.hpp  TonalProgression.hpp  TonalProgressionParameters.hpp  VoiceLeadingConstraints.hpp
c++/src/: Binasc.cpp  BranchingTests.cpp  FourVoiceTexture.cpp  GeneralConstraints.cpp  HarmonicConstraints.cpp  HeuristicsTestingSetup.cpp  MajorTonality.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiFileGeneration.cpp  MidiMessage.cpp  MinorTonality.cpp  Options.cpp  Preferences.cpp  Solver.cpp  TestBranching.cpp  Tonality.cpp  Utilities.cpp  VoiceLeadingConstraints.cpp  main.cpp  parallelRun.cpp  problem_wrapper.cpp  testTonality.cpp
c++/src/aux/: MajorTonality.cpp  MidiFileGeneration.cpp  MinorTonality.cpp  Tonality.cpp  Utilities.cpp
c++/src/diatony/: FourVoiceTexture.cpp  FourVoiceTextureParameters.cpp  GeneralConstraints.cpp  HarmonicConstraints.cpp  ModulationParameters.cpp  Preferences.cpp  SolveDiatony.cpp  TonalProgression.cpp  TonalProgressionParameters.cpp  VoiceLeadingConstraints.cpp
c++/src/midifile/: Binasc.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiFile.cpp  MidiMessage.cpp  Options.cpp
efficiency_measurment/: HeuristicsTestingSetup.cpp  Makefile  TestCases.hpp  TestCases.txt  graphs.py  launch_tests.sh  launch_xp_sh.sh  parallelRun.cpp  restart_comparison.py
python_data_processing/: graphs.py  restart_comparison.py
reference-pages/: ind-alpha.html  index.html
sources/: problem-wrapper.lisp
